--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+p {
+  font-size: 30px;
+  color: royalblue;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+}
